     -- extracted defined '_Static' structure out of Object and into it's own
        standalone class called ClassMetadata, which is what it is.  Updated
        Object itself to use a variable called 'metadata' in lue of '_static'
        to store class and object related metadata.  This has NO impact on API,
        but does make the code more readable.

   Component class
     -- component-based data logger functionality has been removed.  Removal of
        rippled into simulation library with the deletion of SimLogger and
        TabLogger classes.

   SlotTable class
     -- removed useless methods such as copyData, deleteData -- probably remnant
        from long ago, when it might have been an Object-based class.

--------------------------------------------------------------------------------
dafif library


--------------------------------------------------------------------------------
dis library

--------------------------------------------------------------------------------
glut library

--------------------------------------------------------------------------------
graphics library


--------------------------------------------------------------------------------
hla library


--------------------------------------------------------------------------------
instruments library


--------------------------------------------------------------------------------
iodevice library


--------------------------------------------------------------------------------
linearsystem library


--------------------------------------------------------------------------------
models library


--------------------------------------------------------------------------------
otw library

- Much cleanup of this library by breaking out and making explicit all the OTW
  related code.  This included cigi classes now logically grouped within 'cigi'
  folder.

--------------------------------------------------------------------------------
recorder library
